added user registration APi
